<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CashMaker</string>
    <!--TRADUCIR: DESDE AQUÍ -->

    <!--ActionBar -->
    <string name="titulo_user_info">Mi Cuenta</string>
    <string name="subtitulo_user_info">Información</string>

    <string name="titulo_lista_apps">Ofertas</string>
    <string name="subtitulo_lista_apps">Lista de aplicaciones</string>

    <string name="titulo_compartir">Compartir</string>
    <string name="subtitulo_compartir">Invita a un amigo</string>

    <string name="titulo_ranking">Ranking</string>
    <string name="subtitulo_ranking">Top diez usuarios de CashMaker</string>

    <string name="titulo_cobros">Cobro</string>
    <string name="subtitulo_cobros">Obtén tu beneficio</string>

    <string name="titulo_about">Nosotros</string>
    <string name="subtitulo_about">Acerca de nosotros</string>

    <string name="titulo_faq">FAQ</string>
    <string name="subtitulo_faq">Preguntas frecuentes</string>

    <string name="titulo_adscend">AdscendMedia</string>
    <string name="subtitulo_adscend">Ofertas AdscendMEdia</string>

    <!--Contenido de los fragments -->
    <string name="cont_login_cabecera_nuevo_cashmaker">¿Nuevo en CashMaker? \n Selecciona una cuenta de registro</string>
    <string name="cont_login_selec_cuenta_acceso">Selecciona una cuenta de acceso.</string>

    <!--Contenido de los datos a compartir -->
    <string name="compartir_cashmaker">Descarga Cashmaker y Gana Dinero \n https://goo.gl/dmpmGB</string>



    <!--Botones -->
    <string name="boton_instalar">Instalar</string>
    <string name="boton_instalada">Instalada</string>
    <string name="boton_aceptar">Aceptar</string>
    <string name="boton_confirmar">Confirmar</string>
    <string name="boton_modificar">Modificar</string>
    <string name="boton_copiar">Copiar</string>
    <string name="boton_compartir">Compartir</string>
    <string name="boton_cobro"> Solicitar cobro </string>
    <string name="boton_cobro_amazon5"> 5000 coins </string>
    <string name="boton_cobro_amazon2"> 2000 coins </string>
    <string name="boton_cobro_PayPal5"> 5000 coins </string>
    <string name="boton_login_registrarse">Registrarse</string>

    <!--Diálogos -->
    <string name="dialogo_carga_apps">Cargando lista de ofertas...</string>
    <string name="dialogo_carga_splash">Cargando aplicación...</string>
    <string name="dialogo_carga_perfil">Cargando perfil de usuario...</string>
    <string name="dialogo_carga_refer">Procesando petición...</string>
    <string name="dialogo_peticion_refer_ok">La petición se ha procesado correctamente.</string>
    <string name="dialogo_peticion_refer_ko">No existen ningún usuario con ese código, por favor, vuelve a intentarlo.</string>
    <string name="dialogo_titulo_salir">Salir</string>
    <string name="dialogo_titulo_atencion">Atención</string>
    <string name="dialogo_cuerpo_salir">¿Seguro que quieres salir de la aplicación?</string>
    <string name="dialogo_cuerpo_atencion">La cuenta está bloqueada, por favor, póngase en contacto con nuestro soporte en info@cashmakertheapp.com</string>
    <string name="dialogo_si">Si</string>
    <string name="dialogo_no">No</string>
    <string name="dialogo_aceptar">Aceptar</string>
    <string name="dialogo_cancelar">Cancelar</string>
    <string name="dialogo_calificar">¿Te gusta CashMaker? ¡Danos 5 estrellas!</string>
    <string name="dialogo_solicitud_cobro_aceptada">Su solicitud de cobro ha sido tramitada y se realizará en 24/48h, si tiene alguna duda, por favor, contáctenos.</string>
    <string name="dialogo_solicitud_cobro_rechazada">Ha ocurrido un error durante su tramitación o el servicio no está disponible. Por favor, inténtelo de nuevo más tarde.</string>
    <string name="dialogo_solicitud_cobro_aceptada_titulo">Solicitud aceptada</string>
    <string name="dialogo_solicitud_cobro_rechazada_titulo">Solicitud rechazada</string>
    <string name="dialogo_solicitud_cobro_procesando">Pocesando solicitud</string>
    <string name="dialogo_solicitud_cobro_error_correo">El correo no es correcto</string>
    <string name="dialogo_solicitud_cobro_error_titulo">Error</string>
    <string name="dialogo_referido_texto_incorrecto">El texto no es correcto, revíselo e inténtelo de nuevo</string>
    <string name="dialogo_error_instalacion">Oooops, ha sucedido un error, por favor, inténtalo de nuevo más tarde</string>
    <string name="dialogo_error_alta_usuario">Oooops, ha sucedido un error en el alta de usuario, por favor, inténtalo de nuevo más tarde</string>
    <string name="dialogo_error_conexion">Conexión de datos no disponible, por favor, conéctate a una red y vuelve a intentarlo.</string>


    <!--Notificaciones -->
    <string name="nf_nuevo_pago">Nuevos pagos CashMaker</string>
    <string name="nf_app_inst_plural">Ha recibido nuevos pagos por las aplicaciones instaladas [APPS] \n Valor: [PPI].</string>
    <string name="nf_app_inst_singular">Ha recibido un nuevo pago por la aplicación instalada [APPS] \n Valor: [PPI].</string>



    <!--Contenido de los fragments -->
    <string name="layout_login_cabecera">Selecciona una cuenta</string>
    <string name="layout_login_nombre">Nombre (opcional)</string>
    <string name="layout_login_codamigo">¿Tienes un código de amigo?</string>
    <string name="layout_login_registro">¿Nuevo en CashMaker?</string>
    <string name="layout_login_cuentas">Selecciona una cuenta para registrarte</string>
    <string name="layout_cobro_tucodigo">Tu código</string>
    <string name="layout_cobro_tusaldo">Tu saldo</string>
    <string name="layout_cobro_codigoamigo">Código de amigo</string>
    <string name="layout_cobro_correopaypal">Confirma tu correo PayPal</string>
    <string name="layout_cambio_correopaypal">El correo PayPal se modificará. ¿Es correcto?</string>
    <string name="layout_cambio_correopaypal_realizado">Cambio realizado</string>
    <string name="layout_perfil_nombre">Nombre</string>
    <string name="layout_perfil_correo">Correo</string>


    <!--Contenido de los fragments -->
    <string name="cabecera_user_info">Información de la cuenta</string>
    <string name="cabecera_compartir">¿Referido por un amigo?</string>
    <string name="cabecera_cobro">Retirar beneficios</string>


    <!--Imágenes -->
    <drawable name="oferta_footer">@drawable/sharefooter_es</drawable>

    <!--HTML-->
    <string name="html_amazon5">el gift tarjeta Amazon valorado en 5$ a cambio de 5000 coins.</string>
    <string name="html_amazon2">el gift tarjeta Amazon valorado en 2$ a cambio de 2000 coins.</string>
    <string name="html_paypal5">el gift pago PayPal valorado en 5$ a cambio de 5000 coins.</string>

    <!--Ayuda-->
    <string name="html_aboutus">file:///android_asset/Aboutus_es.html</string>
    <string name="html_faq">file:///android_asset/FAQ_es.html</string>



    <!-- Lista de elementos e navegación -->
    <string-array name="nav_options">
        <item>Perfil</item>
        <item>Ver ofertas</item>
        <item>Ranking</item>sr
        <item>Obtener mis beneficios</item>
        <item>Acerca de</item>
        <item>FAQ</item>
        <item>AdscendMedia</item>
    </string-array>


    <!--TRADUCIR: HASTA AQUÍ -->

    <!-- Iconos de navegación -->
    <array name="navigation_iconos">
        <item>@drawable/user32</item>
        <item>@drawable/lista32</item>
        <item>@drawable/podium64</item>
        <item>@drawable/billetes64</item>
        <item>@drawable/aboutus32</item>
        <item>@drawable/faq32</item>
        <item>@drawable/adscendico</item>
    </array>

    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
