<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cashmyapps.core.cashmyappsproject.Perfil"
    android:orientation="vertical"
    android:background="@layout/fondo_login">


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:id="@+id/imageView5"
            android:src="@drawable/user_info"
            android:layout_marginTop="5dp"
            android:layout_row="1"
            android:layout_column="1"/>

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/layout_perfil_nombre"
            android:id="@+id/lbNombre"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:background="@layout/caja_texto"
            android:layout_marginBottom="5dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:id="@+id/txUENombre"
            android:layout_gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/layout_perfil_correo"
            android:id="@+id/mail"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|bottom" />
        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:background="@layout/caja_texto"
            android:id="@+id/txUEcorreo"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/layout_cobro_tucodigo"
            android:id="@+id/lbReferido"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|bottom" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:textAlignment="center"
            android:gravity="center"
            android:background="@layout/caja_texto"
            android:id="@+id/txReferido"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal|bottom" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:id="@+id/imPayPal"
        android:src="@drawable/paypaluserinfo"
        android:layout_row="1"
        android:layout_column="1"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textSize="15dp"
        android:textAlignment="center"
        android:gravity="center"
        android:background="@layout/caja_texto"
        android:id="@+id/txPayPal"
        android:layout_marginBottom="5dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal|bottom" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:text="@string/boton_modificar"
        android:id="@+id/btPayPal"
        android:background="@drawable/custom_btn_orange"
        android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/layout_cobro_codigoamigo"
            android:id="@+id/lbReferir"
            android:textSize="15dp"
            android:textColor="#ffffff"
            android:layout_gravity="center_horizontal|bottom" />

        <EditText
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:textSize="15dp"
            android:background="@layout/caja_texto"
            android:id="@+id/txReferir"
            android:layout_marginBottom="5dp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:gravity="center"
            android:layout_gravity="center_horizontal|bottom" />

    <TextView
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/layout_cobro_codigoamigo"
        android:id="@+id/lbMensajeFinal"
        android:textSize="15dp"
        android:textColor="#ffffff"
        android:layout_gravity="center_horizontal|bottom"
        android:visibility="invisible" />



        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/boton_aceptar"
            android:id="@+id/btReferidoP"
            android:background="@drawable/custom_btn_orange"
            android:layout_gravity="center_horizontal" />


    </LinearLayout>


