<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cashmyapps.core.cashmyappsproject.Beneficios"
    android:orientation="vertical"
    android:background="@layout/fondo_login"
    android:rowCount="3"
    android:columnCount="3">


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imAmazon5"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/amazon5card"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_cobro_amazon5"
            android:background="@drawable/custom_btn_orange"
            android:id="@+id/btAmazon5"
            android:textSize="20dp"
            android:layout_marginLeft="50dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:layout_marginLeft="20dp"
            android:id="@+id/imAmazon2"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/amazon2card"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_cobro_amazon2"
            android:background="@drawable/custom_btn_orange"
            android:id="@+id/btAmazon2"
            android:textSize="20dp"
            android:layout_marginLeft="50dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="160dp"
            android:layout_height="120dp"
            android:id="@+id/imPayPal5"
            android:layout_marginLeft="20dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/paypal5"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/boton_cobro_PayPal5"
            android:background="@drawable/custom_btn_orange"
            android:id="@+id/btPayPal5"
            android:textSize="20dp"
            android:layout_marginLeft="50dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/layout_cobro_tusaldo"
            android:textColor="#ffffff"
            android:id="@+id/txTitulo"
            android:textSize="20dp"
            android:textStyle="bold"
            android:layout_marginBottom="4dp"
            android:layout_row="0"
            android:layout_column="1" />



        <TextView
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:background="@layout/caja_texto"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:id="@+id/txCobroSaldo"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="20dp"
            android:layout_gravity="center_horizontal|bottom"
        android:text="2000 coins"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/boton_cobro"
        android:background="@drawable/custom_btn_orange"
        android:id="@+id/btSolicitarBeneficios"
        android:gravity="center_vertical"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal" />




</LinearLayout>